--- a/package.json
+++ b/package.json
@@ -11,33 +11,37 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
-    "@capacitor/app": "^5.0.0",
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/haptics": "^5.0.0",
-    "@capacitor/keyboard": "^5.0.0",
-    "@capacitor/status-bar": "^5.0.0",
+    "@capacitor/android": "^7.0.1",
+    "@capacitor/app": "^7.0.0",
+    "@capacitor/core": "^7.0.1",
+    "@capacitor/haptics": "^7.0.0",
+    "@capacitor/ios": "^7.0.1",
+    "@capacitor/keyboard": "^7.0.0",
+    "@capacitor/status-bar": "^7.0.0",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
-    "@supabase/supabase-js": "^2.31.0",
+    "@supabase/supabase-js": "^2.49.1",
     "chart.js": "^4.3.3",
     "date-fns": "^2.30.0",
     "ionicons": "^7.0.0",
+    "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.0.0",
+    "@capacitor/cli": "^5.7.8",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "typescript": "^5.0.4",
-    "vite": "^4.3.9"
+    "vite": "^6.2.1"
   }
 }
